Final de maquetacion sin responsive

--- a/index.html
+++ b/index.html
@@ -1,37 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/estilos.css">
     <title>Card Grid</title>
 </head>
+
 <body>
     <div class="container">
-
         <header>
-            <div>
-                <img src="" alt="">
-            </div>
-            <div>
-                <h1></h1>
-                <h4></h4>
+            <img src="./pictures/dmg.jpg" alt="">
+            <div class="titulo">
+                <h1>DMG MORI SEIKI</h1>
+                <h3>The Best Machine CNC</h3>
             </div>
         </header>
 
-        <section>
-            <img src="" alt="">
-            <p></p>
+        <section class="imagen">
+            <img class="imagen__img" src="./pictures/usinagem-de-precisao-DMG.jpg" alt="">
+            <p class="imagen__parrafo" >La digitalización está cambiando nuestro mundo de forma rápida y radical. Requiere un mayor desarrollo que sólo se puede conseguir de manera global y conjunta, en asociaciones sólidas y en pie de igualdad. DMG MORI continua desarrollándose positivamente - tecnológicamente, estructuralmente y culturalmente. Nuestro negocio está marcado por la dinámica y excelencia.</p>
         </section>
-       
+
         <footer>
             <div class="botones">
+                <a href="">ACTION 1</a>
+                <a href="">ACTION 2</a>
 
             </div>
             <div class="likes">
-                
+                <img src="./pictures/heart.svg" alt="">
+                <img src="./pictures/network.svg" alt="">
+
             </div>
         </footer>
-    </div>    
+    </div>
 </body>
+
 </html>
